Feature - Add journal and author

--- a/publications/templates/publications/formsetfield.html
+++ b/publications/templates/publications/formsetfield.html
@@ -1,7 +1,7 @@
 {% load bootstrap_tags %}
 {% load i18n %}
 
-<a href="{{ profile.account.get_profile_add_author_url }}"
+<a href="{{ context.profile.account.get_profile_add_author_url }}"
     class="btn btn-success"
     style="width: 150px !important"
     target="_blank"
