--- a/publications/templates/publications/formsetfield.html
+++ b/publications/templates/publications/formsetfield.html
@@ -1,12 +1,13 @@
 {% load bootstrap_tags %}
 {% load i18n %}
-
+<div>
 <a href="{{ context.profile.account.get_profile_add_author_url }}"
     class="btn btn-success"
     style="width: 150px !important"
     target="_blank"
     onclick="return showAddAnotherPopup(this);">{% trans 'New Author' %}
 </a>
+</div>
 <br>
 <table class="table table-hover">
     {{ formset.management_form }}
