--- a/igwatlas/templates/igwatlas/map.html
+++ b/igwatlas/templates/igwatlas/map.html
@@ -97,11 +97,11 @@
                       <div class="modal-body">
                         <form class="form-horizontal" role="form">
                             <div class="form-group">
-                                <label for="id_label_types" class="col-sm-2 control-label">
+                                <label for="id_for_types" class="col-sm-2 control-label">
                                     {% trans 'Select types' %}
                                 </label>
                                 <div class="col-sm-10">
-                                    <select class="types_multiple" id="id_label_types" multiple="multiple" style="width: 100%">
+                                    <select class="types_multiple" id="id_for_types" multiple="multiple" style="width: 100%">
                                         <option value="0">{% trans "Map" %}</option>
                                         <option value="1">{% trans "Graphic" %}</option>
                                         <option value="2">{% trans "Satellite" %}</option>
@@ -110,12 +110,51 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <label for="id_for_date" class="col-sm-2 control-label">
+                                    {% trans "Date of observation" %}
+                                </label>
+                                <div class="col-sm-10">
+                                    <div class="input-group date" data-provide="datepicker" data-date-format="yyyy-mm-dd">
+                                        <input id="id_for_date" type="text" class="form-control">
+                                        <div class="input-group-addon">
+                                            <span class="glyphicon glyphicon-th"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="id_for_image" class="col-sm-2 control-label">
+                                    {% trans "Choose file" %}
+                                </label>
+                                <div class="col-sm-10">
+                                    <input type="file" class="form-control-file" id="id_for_image">
+                                </div>
+
+                            </div>
+                            <div class="form-group">
+                                <label for="id_for_source" class="col-sm-2 control-label">
+                                    {% trans "Source" %}
+                                </label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="id_for_source" placeholder="{% trans "Source" %} ">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="id_for_page" class="col-sm-2 control-label">
+                                    {% trans "Page" %}
+                                </label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="id_for_page" placeholder="{% trans "Page" %} ">
+                                </div>
+                            </div>
 
                         </form>
+
                       </div>
                       <div class="modal-footer">
                           <button id='create_cancel' type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close and clear" %}</button>
-                          <button id='create_btn' type="button" class="btn btn-primary" data-dismiss="modal">{% trans "Create" %}</button>
+                          <button id='add_record_button' type="button" class="btn btn-primary" data-dismiss="modal">{% trans "Create" %}</button>
                       </div>
                     </div>
                  </div>
