--- a/igwatlas/templates/igwatlas/map.html
+++ b/igwatlas/templates/igwatlas/map.html
@@ -119,12 +119,12 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="checkbox_for_date_range" class="col-sm-2 control-label">
-                                    {% trans "Enable checkboxes below for " %}
+                                <label for="checkbox_for_date_range" class="col-sm-2 control-label" >
+                                    {% trans "Enable checkboxes below for choose date format " %}
                                 </label>
                                 <div class="col-sm-10">
                                     <input type="checkbox" name="enable_checkbox" class="form-control"
-                                           id="checkbox_for_date_range">
+                                           id="checkbox_for_date_range" value="off">
                                 </div>
                             </div>
                             <div class="form-group" id="id_control_date">
@@ -132,7 +132,7 @@
                                     {% trans "Date of observation" %}
                                 </label>
                                 <div class="col-sm-10">
-                                    <div class="input-group datetime" data-provide="datepicker"
+                                    <div class="input-group date" data-provide="datepicker"
                                          data-date-format="yyyy-mm-dd">
                                         <input id="id_for_date" type="text" class="form-control">
                                         <div class="input-group-addon">
@@ -141,7 +141,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group" id="id_control_date_from">
+                            <div class="form-group" id="id_control_date_from" style="display:none">
                                 <label for="id_for_date_from" class="col-sm-2 control-label">
                                     {% trans "Select date from" %}
                                 </label>
@@ -155,7 +155,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group" id="id_control_date_to">
+                            <div class="form-group" id="id_control_date_to" style="display:none">
                                     <label for="id_for_date_to" class="col-sm-2 control-label">
                                         {% trans "Select date to" %}
                                     </label>
