Bug #48 - fixing igwatlas errors, set image is required field

--- a/tank/templates/tank/base.html
+++ b/tank/templates/tank/base.html
@@ -156,7 +156,7 @@
     <footer class="container-fluid text-center">
         <p class="pull-left"><a href="{% url 'home' %}">Back to LMNAD</a></p>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© <a href="{% url 'home' %}">LMNAD</a> 2017-2018 </p>
+        <p>© <a href="{% url 'home' %}">LMNAD</a> 2017 - {% now "Y" %} </p>
     </footer>
 </body>
 </html>
