--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -114,7 +114,7 @@
 </div>
 <br>
 <footer class="container-fluid text-center">
-  <p>{% trans "Laboratory of Modeling of Natural and Anthropogenic Disasters, NNSTU n.a. R.E. Alekseev  © 2017-2018" %} </p>
+  <p>{% trans "Laboratory of Modeling of Natural and Anthropogenic Disasters, NNSTU n.a. R.E. Alekseev" %} © 2017 - {% now "Y" %} </p>
 </footer>
 </body>
 </html>
