--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -93,7 +93,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{ user.username }} <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="{{ user.get_absolute_url }}">{% trans "My account" %}</a></li>
+                  {% if user.account %}
+                    <li><a href="{{ user.get_absolute_url }}">{% trans "My account" %}</a></li>
+                  {% endif %}
                   <li><a href="{% url 'change_password' %}">{% trans "Change password" %}</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="{% url 'logout' %}">{% trans "Log out" %}</a></li>
