feature_69 - Add useful links

--- a/lmnad/templates/lmnad/send_email.html
+++ b/lmnad/templates/lmnad/send_email.html
@@ -7,4 +7,6 @@
         {{ text | safe }}
     </div>
     <p>{{ date }}</p>
+    <hr>
+    <p>Данное письмо сгенерировано автоматически, пожалуйста, не отвечайте на него</p>
 </div>
