--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -45,6 +45,7 @@
               <li><a href="{% url 'publications' %}"> {% trans "Publication" %} </a></li>
               <li><a href="{% url 'grants' %}"> {% trans "Grants" %} </a></li>
               <li><a href="{% url 'projects' %}"> {% trans "Projects" %}</a></li>
+              <li><a href="{% url 'links' %}"> {% trans "Useful Links" %}</a></li>
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                       {% trans "News" %}
