--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -90,6 +90,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
     <script src="{% static 'igwatlas/igwatlas.js' %}"></script>
+    <script src="{% static 'igwatlas/params.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/js/bootstrap-datepicker.js"></script>
 </head>
@@ -115,6 +116,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
                 <li><a href="{% url 'map' %}"> {% trans "Map" %} </a></li>
+                <li><a href="{% url 'parameters' %}"> {% trans "Parameters IGW" %} </a></li>
                 <li><a href="{% url 'source' %}"> {% trans "Sources" %} </a></li>
                 <li><a href="{% url 'about' %}"> {% trans "About" %} </a></li>
               </ul>
