--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -72,6 +72,10 @@
             height:600px
         }
 
+        #map-params {
+            width:100%;
+            height:600px
+        }
         .modal-body .form-horizontal .col-sm-2,
         .modal-body .form-horizontal .col-sm-10 {
             width: 100%;
@@ -84,6 +88,7 @@
             margin-left: 15px;
         }
     </style>
+
 
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
