atlas_feature - create an atlas

--- a/igwatlas/templates/igwatlas/map_params.html
+++ b/igwatlas/templates/igwatlas/map_params.html
@@ -51,8 +51,8 @@
                                 </label>
                                 <div class="col-sm-10">
                                     <div class="amplitude_range">
-                                        <label class="min-ampl">{% trans 'from' %} <input type="text" name="min-ampl" id="wave_amplitude" style ="height: 39px; font-size: 15px" ></label>
-                                        <label class="max-ampl">{% trans 'to' %} <input type="text" name="max-ampl" style ="height: 39px; font-size: 15px" ></label>
+                                        <label class="amplitude_from">{% trans 'from' %} <input type="text" name="amplitude_from" id="wave_amplitude" style ="height: 39px; font-size: 15px" ></label>
+                                        <label class="amplitude_to">{% trans 'to' %} <input type="text" name="amplitude_to" style ="height: 39px; font-size: 15px" ></label>
                                     </div>
                                 </div>
                             </div>
