--- a/igwatlas/templates/igwatlas/map_params.html
+++ b/igwatlas/templates/igwatlas/map_params.html
@@ -51,8 +51,19 @@
                                 </label>
                                 <div class="col-sm-10">
                                     <div class="amplitude_range">
-                                        <label class="amplitude_from">{% trans 'from' %} <input type="text" name="amplitude_from" id="wave_amplitude" style ="height: 39px; font-size: 15px" ></label>
-                                        <label class="amplitude_to">{% trans 'to' %} <input type="text" name="amplitude_to" style ="height: 39px; font-size: 15px" ></label>
+                                        <label class="amplitude_from">{% trans 'from' %} <input type="text" name="amplitude_from" id="wave_amplitude_from" style ="height: 39px; font-size: 15px" ></label>
+                                        <label class="amplitude_to">{% trans 'to' %} <input type="text" name="amplitude_to" id="wave_amplitude_to" style ="height: 39px; font-size: 15px" ></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="wave_period" class="col-sm-2 control-label">
+                                    {% trans 'Select wave period' %}
+                                </label>
+                                <div class="col-sm-10">
+                                    <div class="period_range">
+                                        <label class="period_from">{% trans 'from' %} <input type="text" name="period_from" id="wave_period_from" style ="height: 39px; font-size: 15px" ></label>
+                                        <label class="period_to">{% trans 'to' %} <input type="text" name="period_to" id="wave_period_to" style ="height: 39px; font-size: 15px" ></label>
                                     </div>
                                 </div>
                             </div>
@@ -80,14 +91,6 @@
                                                 <span class="glyphicon glyphicon-th"></span>
                                             </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="id_label_sources" class="col-sm-2 control-label">
-                                    {% trans "Source" %}
-                                </label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="id_label_sources" placeholder="{% trans "Source" %} ">
                                 </div>
                             </div>
                         </form>
