--- a/lmnad/templates/lmnad/grants.html
+++ b/lmnad/templates/lmnad/grants.html
@@ -9,7 +9,7 @@
             <th> {% trans "Number" %} </th>
             <th> {% trans "Type" %} </th>
             <th> {% trans "Name" %} </th>
-            <th> {% trans "Superviser" %} </th>
+            <th> {% trans "Supervisor" %} </th>
             <th> {% trans "Dates" %} </th>
         </tr>
     </thead>
