--- a/lmnad/templates/lmnad/profile.html
+++ b/lmnad/templates/lmnad/profile.html
@@ -172,7 +172,7 @@
                 <th> {% trans "Number" %} </th>
                 <th> {% trans "Type" %} </th>
                 <th> {% trans "Name" %} </th>
-                <th> {% trans "Superviser" %} </th>
+                <th> {% trans "Supervisor" %} </th>
                 <th> {% trans "Dates" %} </th>
             </tr>
         </thead>
@@ -214,7 +214,7 @@
                 <th> {% trans "Number" %} </th>
                 <th> {% trans "Type" %} </th>
                 <th> {% trans "Name" %} </th>
-                <th> {% trans "Superviser" %} </th>
+                <th> {% trans "Supervisor" %} </th>
                 <th> {% trans "Dates" %} </th>
             </tr>
         </thead>
