--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -72,6 +72,10 @@
             height:600px
         }
 
+        #map-params {
+            width:100%;
+            height:600px
+        }
         .modal-body .form-horizontal .col-sm-2,
         .modal-body .form-horizontal .col-sm-10 {
             width: 100%;
@@ -85,11 +89,13 @@
         }
     </style>
 
+
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
     <script src="{% static 'igwatlas/igwatlas.js' %}"></script>
+    <script src="{% static 'igwatlas/params.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/js/bootstrap-datepicker.js"></script>
 </head>
@@ -115,6 +121,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
                 <li><a href="{% url 'map' %}"> {% trans "Map" %} </a></li>
+                <li><a href="{% url 'parameters' %}"> {% trans "Parameters IGW" %} </a></li>
                 <li><a href="{% url 'source' %}"> {% trans "Sources" %} </a></li>
                 <li><a href="{% url 'about' %}"> {% trans "About" %} </a></li>
               </ul>
@@ -189,7 +196,7 @@
     <footer class="container-fluid text-center">
         <p class="pull-left"><a href="{% url 'home' %}">Back to LMNAD</a></p>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>© <a href="{% url 'home' %}">LMNAD</a> 2017-2018 </p>
+        <p>© <a href="{% url 'home' %}">LMNAD</a> 2017-{% now "Y" %} </p>
     </footer>
 </body>
 </html>
