Hide IGW params

--- a/igwatlas/templates/igwatlas/igwatlas.html
+++ b/igwatlas/templates/igwatlas/igwatlas.html
@@ -26,8 +26,8 @@
         <div class="col-sm-4">
           <h3>{% trans "Observations" %}</h3>
           <p> {{ count_observation }} - {% trans 'number of observation in database' %}</p>
-          <p> {{ count_records }} - {% trans 'number of records in database' %}</p>
-          <p> {{ count_params }} - {% trans 'number of analyzed records in database' %}</p>
+          <!--p> {{ count_records }} - {% trans 'number of records in database' %}</p>
+          <p> {{ count_params }} - {% trans 'number of analyzed records in database' %}</p-->
           <p>{% trans 'Years in DB: ' %}  {{ min_date|date:"Y" }} -  {{ max_date|date:"Y" }} </p>
         </div>
       </div>
