--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -121,7 +121,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
                 <li><a href="{% url 'map' %}"> {% trans "Map" %} </a></li>
-                <li><a href="{% url 'parameters' %}"> {% trans "Parameters IGW" %} </a></li>
+                <!--li><a href="{% url 'parameters' %}"> {% trans "Parameters IGW" %} </a></li-->
                 <li><a href="{% url 'source' %}"> {% trans "Sources" %} </a></li>
                 <li><a href="{% url 'about' %}"> {% trans "About" %} </a></li>
               </ul>
