--- a/igwatlas/templates/igwatlas/map_params.html
+++ b/igwatlas/templates/igwatlas/map_params.html
@@ -47,7 +47,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="wave_amplitude" class="col-sm-2 control-label">
-                                    {% trans 'Select wave amplitude' %}
+                                    {% trans 'Select wave amplitude in meters' %}
                                 </label>
                                 <div class="col-sm-10">
                                     <div class="amplitude_range">
@@ -58,7 +58,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="wave_period" class="col-sm-2 control-label">
-                                    {% trans 'Select wave period' %}
+                                    {% trans 'Select wave period in hours' %}
                                 </label>
                                 <div class="col-sm-10">
                                     <div class="period_range">
