--- a/igwatlas/templates/igwatlas/map.html
+++ b/igwatlas/templates/igwatlas/map.html
@@ -14,6 +14,24 @@
                     </button>
                 </div>
             </div>
+            <div class="col-sm-8">
+                <div class="checkbox" style="display: inline-block;">
+                  <label>
+                    <input id="cluster-checkbox" type="checkbox" value="" {% if clusterize %}checked{% endif %}>
+                      <abbr title="{% trans 'Turn Off/On Clusterization' %}">{% trans 'Clusterization' %}</abbr>
+                  </label>
+                </div>
+                <div class="checkbox" style="display: inline-block;">
+                  <label>
+                    <input id="labels-checkbox" type="checkbox" value="">
+                      <abbr title="{% trans 'Turn Off/On Labels' %}">{% trans 'Labels' %}</abbr>
+                  </label>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <span for="coords">{% trans 'Coordinates (lat, lon)' %}: </span>
+                <span id="coords_lat">0</span>, <span id="coords_lon">0</span>
+            </div>
 
             <!-- Modal -->
             <div id="search" class="modal fade" role="dialog">
@@ -218,6 +236,9 @@
         <br>
         <div class="row">
             <div id="map"></div>
+        </div>
+        <div class="text-center">
+            <span id="info"></span>
         </div>
         <br>
     </div>
