LMNAD-74 Fix pagination and filtering on IGWAtlas sources page

--- a/igwatlas/templates/igwatlas/sources.html
+++ b/igwatlas/templates/igwatlas/sources.html
@@ -1,6 +1,7 @@
 {% extends 'igwatlas/base.html' %}
 {% load staticfiles %}
 {% load i18n %}
+{% load igwatlas_tags %}
 
 {% block content %}
     <div class="container" >
@@ -44,7 +45,7 @@
             {% if sources.has_other_pages %}
               <ul class="pagination">
                 {% if sources.has_previous %}
-                  <li><a href="?page={{ sources.previous_page_number }}">&laquo;</a></li>
+                  <li><a href="?{% param_replace page=sources.previous_page_number %}">&laquo;</a></li>
                 {% else %}
                   <li class="disabled"><span>&laquo;</span></li>
                 {% endif %}
@@ -52,11 +53,11 @@
                   {% if sources.number == i %}
                     <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
                   {% else %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    <li><a href="?{% param_replace page=i %}">{{ i }}</a></li>
                   {% endif %}
                 {% endfor %}
                 {% if sources.has_next %}
-                  <li><a href="?page={{ sources.next_page_number }}">&raquo;</a></li>
+                  <li><a href="?{% param_replace page=sources.next_page_number %}">&raquo;</a></li>
                 {% else %}
                   <li class="disabled"><span>&raquo;</span></li>
                 {% endif %}
